# breadboard

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md  bbtool.toml  platformio.ini
components/bb_alert/: CMakeLists.txt  Kconfig
components/bb_alert/include/: bb_alert.h
components/bb_arena_tls/: CMakeLists.txt  Kconfig
components/bb_arena_tls/include/: bb_arena_tls.h
components/bb_board/: CMakeLists.txt  Kconfig
components/bb_board/include/: bb_board.h
components/bb_board/src/: bb_board_heap_state.c
components/bb_bqueue/: CMakeLists.txt  Kconfig  README.md
components/bb_bqueue/include/: bb_bqueue.h
components/bb_bqueue/src/: bb_bqueue_common.c  bb_bqueue_priv.h
components/bb_button/: CMakeLists.txt
components/bb_button/include/: bb_button.h  bb_button_driver.h
components/bb_cache/: CMakeLists.txt  Kconfig
components/bb_cache/include/: bb_cache.h  bb_cache_internal.h
components/bb_cache/src/: bb_cache_evaluate.c
components/bb_cache_routes/: CMakeLists.txt  Kconfig
components/bb_cache_routes/include/: bb_cache_routes.h
components/bb_cache_routes/src/: cache_route_status.c  cache_route_status.h
components/bb_config/: CMakeLists.txt  README.md
components/bb_config/include/: bb_config.h  bb_config_staged.h  bb_nv_keys.h  bb_nv_namespaces.h
components/bb_config_staged/: CMakeLists.txt  README.md
components/bb_config_staged/include/: bb_config_staged.h
components/bb_core/: CMakeLists.txt  Kconfig  README.md
components/bb_core/include/: bb_age.h  bb_byte_order.h  bb_callback_slot.h  bb_claim.h  bb_clock.h  bb_core.h  bb_emit.h  bb_format.h  bb_lifecycle_action.h  bb_lock.h  bb_mem.h  bb_mem_test.h  bb_once.h  bb_reboot_reason.h  bb_type.h
components/bb_core/src/: bb_age.c  bb_format.c  bb_lock_cond_waiterlist.c  bb_lock_cond_waiterlist.h  bb_reboot_reason.c
components/bb_data_http/: CMakeLists.txt  Kconfig  README.md
components/bb_data_http/include/: bb_data_http.h
components/bb_data_http/src/: bb_data_http_common.c  bb_data_http_internal.h
components/bb_diag/: CMakeLists.txt  Kconfig  bb_diag_boot_wire.c  bb_diag_cache_route_status.c  bb_diag_cache_route_status.h  bb_diag_event_common.c  bb_diag_event_priv.h  bb_diag_meminfo.c  bb_diag_reset_decision.c  bb_diag_scrub.c  bb_diag_section.c  bb_diag_section_priv.h  bb_diag_storage_nvs.c  bb_diag_storage_partitions.c
components/bb_diag/include/: bb_diag.h  bb_diag_boot_wire.h  bb_diag_meminfo.h  bb_diag_meminfo_test.h  bb_diag_section.h  bb_diag_storage_nvs.h  bb_diag_storage_nvs_test.h  bb_diag_storage_partitions.h  bb_diag_storage_partitions_test.h
components/bb_diag_http/: CMakeLists.txt  Kconfig  README.md  bb_diag_heap_check_wire.c  bb_diag_heap_check_wire_priv.h  bb_diag_http_boot_wire.c  bb_diag_panic_get_wire.c  bb_diag_panic_get_wire_priv.h  bb_diag_sockets_get_wire.c  bb_diag_sockets_get_wire_priv.h  bb_diag_tasks_get_wire.c  bb_diag_tasks_get_wire_priv.h  bb_storage_http_delete_wire.c  bb_storage_http_delete_wire_priv.h
components/bb_diag_http/include/: bb_diag_http.h  bb_log_http.h  bb_storage_http.h
components/bb_display/: CMakeLists.txt  Kconfig  bb_display_test.h
components/bb_display/include/: bb_display.h  bb_display_autoregister.h  bb_display_backend.h  bb_display_info.h
components/bb_display/src/: bb_display.c  bb_display_font_5x7.c  bb_display_font_6x12.c  bb_display_font_6x8.c  bb_display_font_8x16.c  bb_display_info_event_common.c  bb_display_info_event_priv.h
components/bb_display_ek79007/: CMakeLists.txt
components/bb_display_ek79007/include/: bb_display_ek79007.h
components/bb_display_ili9341/: CMakeLists.txt  Kconfig
components/bb_display_info/: CMakeLists.txt  Kconfig  bb_display_info_event_common.c  bb_display_info_event_priv.h
components/bb_display_info/include/: bb_display_info.h
components/bb_display_ssd1306/: CMakeLists.txt  Kconfig
components/bb_display_st77xx/: CMakeLists.txt  Kconfig
components/bb_event/: CMakeLists.txt  Kconfig  bb_event_common.c  bb_event_test.h
components/bb_event/include/: bb_event.h  bb_event_port.h
components/bb_event_routes/: CMakeLists.txt  Kconfig
components/bb_event_routes/include/: bb_event_routes.h  bb_event_routes_defaults.h
components/bb_event_routes/src/: bb_event_routes_common.c  bb_event_routes_internal.h  bb_event_topic_registry.h  sse_bundle_decision.c  sse_bundle_decision.h  sse_connect_error_decision.c  sse_connect_error_decision.h  sse_pool_reclaim_decision.c  sse_pool_reclaim_decision.h
components/bb_fan/: CMakeLists.txt  Kconfig
components/bb_fan/include/: bb_fan.h  bb_fan_driver.h  bb_fan_test.h
components/bb_fan/src/: bb_fan_pid.c  bb_fan_pid.h
components/bb_fan_routes/: CMakeLists.txt  Kconfig
components/bb_fan_routes/include/: bb_fan_routes.h
components/bb_health/: CMakeLists.txt  Kconfig  bb_health_compose.c  bb_health_compose_priv.h  bb_health_schema_priv.h  bb_health_section.c  bb_health_section_priv.h  bb_health_stack.h  bb_health_stack_common.c  bb_health_stack_wire.c  bb_health_wire.c  bb_health_wire_priv.h
components/bb_health/include/: bb_health.h  bb_health_section.h  bb_health_stack_wire.h  bb_health_test.h
components/bb_heap_arena/: CMakeLists.txt  Kconfig
components/bb_heap_arena/include/: bb_heap_arena.h
components/bb_http/: CMakeLists.txt  Kconfig.projbuild
components/bb_http/include/: bb_dispatch_api.h  bb_http.h  bb_http_api_dispatch.h  bb_http_body.h  bb_http_extender.h  bb_http_extender_test.h  bb_http_query.h
components/bb_http/src/: bb_http_api_dispatch.c  bb_http_body.c  bb_http_extender.c  bb_http_json_obj.c  bb_http_status.c  common_routes.c  http_utils.c  route_registry.c
components/bb_http_client/: CMakeLists.txt  Kconfig
components/bb_http_client/include/: bb_http_client.h
components/bb_http_client/src/: bb_http_client_health.c  bb_http_client_health.h
components/bb_http_pub_routes/: CMakeLists.txt  Kconfig
components/bb_http_pub_routes/include/: bb_http_pub_routes.h
components/bb_http_pub_telemetry/: CMakeLists.txt  Kconfig
components/bb_http_server/: CMakeLists.txt  Kconfig.projbuild
(+1666 files in other folders)
